--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/a/index.xhtml
@@ -44,7 +44,7 @@
     </ui:define>
     <ui:define name="sidebar-content">
         <div id="tabpanel-1">
-            <div class="sidebar-content-header">
+            <div class="sidebar-content-header" style="width: 1142px">
                 <span class="title" data-bind="text : titleTab"/>
                 <!--A1_1 登録-->
                 <button tabindex="1" data-bind="click: registration, enable: isRegistrationable() &amp;&amp; $root.errors.isEmpty"
@@ -56,7 +56,7 @@
             <div id="com-ccg001"/>
             <div class="contents-area">
                 <!--A3_3 社員検索-->
-                <div style="display: table; margin: 15px 0px 15px 65px; width: 900px;">
+                <div style="display: table; margin: 15px 0 15px 65px; width: 900px;">
                     <!--A3_1 対象者-->
                     <div tabindex="2" id="emp-component" style="display: table-cell;"/>
                     <!--A3_2 金額の一覧を表示する-->
