--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/qmm040.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/qmm040.a.style.css
@@ -1,27 +1,25 @@
-.margin-top-item{
+.margin-top-item {
     margin-top: 15px;
 }
 
-
-.margin-left-item{
+.margin-left-item {
     margin-left: 30px;
 }
 
-.margin-top{
+.margin-top {
     margin-top: 40px;
 }
 
-.caret-background.caret-bottom:after{
+.caret-background.caret-bottom:after {
     display: none !important;
 }
 
-#custom-caret:after{
+#custom-caret:after {
     font-size: 2em !important;
     border-left: 1em solid !important;
     border-top: 5em solid transparent !important;
     border-bottom: 5em solid transparent !important;
     color: #e0f59e !important;
-
 }
 
 .ci_scroll_header {
@@ -40,3 +38,16 @@
     width: 16px !important;
 }
 
+#grid .mgrid-header td.left-align {
+    text-align: left;
+}
+
+#grid .mgrid-free td.currency-symbol {
+    text-align: right;
+}
+
+#grid .mgrid-free td.currency-symbol:before {
+    float: left;
+    padding-right: 0px;
+    padding-left: 4px;
+}
