--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
@@ -74,7 +74,7 @@
 						<div class="form-group configs-bar">
 							<button id="emp-redisplay" data-bind="text: '#{i18n.getText('CPS003_21')}'"></button>
 							<button data-bind="ntsHelpButton: {textId: 'CPS003_22', position: 'right center'}">?</button>
-							<button id="batch-change" data-bind="text: '#{i18n.getText('CPS003_23')}'"></button>
+							<button id="batch-change" data-bind="text: '#{i18n.getText('CPS003_23')}', click: $vm.settingBatchs.bind($vm)"></button>
 							<button id="settings" data-bind="cps003Setting: $vm.settings.matrixDisplay"></button>
 							<button id="width-save" data-bind="text: '#{i18n.getText('CPS003_24')}'"></button>
 						</div>
