--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/cps003.f.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/cps003.f.style.css
@@ -2,22 +2,35 @@
 	height: auto !important;
 }
 
-#contents-area .swap-list-updown-contaier>div {
+#contents-area .col-50 {
+	width: 49.65%;
+	vertical-align: top; box-sizing : border-box;
 	display: inline-block;
+	box-sizing: border-box;
 }
 
-.form-group {
-	margin-bottom: 15px;
+#contents-area .form-group {
+	margin-bottom: 10px;
 }
 
-.form-group.two-cols>div:nth-child(2) {
-	margin-left: 140px;
+#contents-area .ntsSearchBox {
+	width: 165px !important;
 }
 
-.nts-searchbbox-wrapper {
-	margin-bottom: 0;
+#contents-area .caret.caret-bottom:after {
+	border-top: 1.3em solid #97D155;
+	border-right: 7em solid transparent;
+	border-left: 7em solid transparent;
+	margin-left: calc(50% - 7em);
+	margin-top: 0.5em;
 }
 
-#swap-list-search-area-input {
-	width: 150px !important;
+#contents-area .bottom-text>div {
+	line-height: 34px;
+	padding-left: 50px;
+}
+
+#contents-area .bottom-text>div>span {
+	display: inline-block;
+	padding-right: 10px;
 }
