--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/index.xhtml
@@ -9,8 +9,8 @@
 		<ui:define name="htmlHead">
 			<script type='text/javascript'>
 				var dialogSize = {
-					width : 580,
-					height : 540
+					width : 520,
+					height : 660
 				};
 			</script>
 			<com:scriptfile set="IGNITE" />
@@ -23,11 +23,57 @@
 			<div id="contents-area"
 				data-bind="let: { 
 						text: nts.uk.resource.getText
-					}>
+					}">
+				<div class="col-50">
+					<div class="form-group" data-bind="ntsFormLabel: { required: true }">#{i18n.getText('CPS003_71')}</div>
+					<div class="form-group" data-bind="ntsSearchBox: {
+                            targetKey: 'id',
+                            comId: 'list_items',
+                            items: $vm.dataSources,
+                            selected: $vm.currentItem.id,
+                            selectedKey: 'id', 
+                            fields: ['name'], 
+                            mode: 'igGrid'
+                        }"></div>
+                    <table data-bind="attr: {
+                                id: 'list_items',
+                                NameID: text('CPS003_72')
+                            }, 
+                            ntsGridList: {
+                                rows: 14,
+                                multiple: false,
+                                columns: [
+                                    { headerText: '', key: 'id', width: 100, hidden: true },
+                                    { headerText: text('CPS001_26'), key: 'name', width: 220, hidden: false }
+                                ],
+                                primaryKey: 'id',
+                                value: $vm.currentItem.id,
+                                dataSource: $vm.dataSources
+                            }"></table>
+				</div>
+				<div class="col-50">
+					<div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('CPS003_74')}</div>
+				</div>
+				<div class="caret caret-bottom"></div>
+				<div class="bottom-text">
+					<div>
+						<span>#{i18n.getText('F2_002')}</span>
+						<span>#{i18n.getText('CPS003_92')}</span>
+					</div>
+					<div>
+						<span>#{i18n.getText('F2_004')}</span>
+						<span>#{i18n.getText('CPS003_93')}</span>
+						<span>#{i18n.getText('F2_006')}</span>
+						<!-- F2_007 -->
+						<span>#{i18n.getText('CPS003_94')}</span>
+						<!-- F2_008 -->
+						<!-- <span>#{i18n.getText('CPS003_95')}</span> -->
+					</div>
+				</div>				
 			</div>
 			<div id="functions-area-bottom">
-				<button class="proceed x-large" data-bind="">#{i18n.getText('CPS007_16')}</button>
-				<button data-bind="click: close">#{i18n.getText('CPS007_17')}</button>
+				<button class="proceed x-large" data-bind="">#{i18n.getText('CPS003_96')}</button>
+				<button data-bind="click: close">#{i18n.getText('CPS003_97')}</button>
 			</div>
 		</ui:define>
 	</ui:composition>
