--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/028/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/028/a/index.xhtml
@@ -39,7 +39,7 @@
                     <!-- A2_1 -->
                     <div id="A2_1" class="lable table-2" data-bind="ntsFormLabel: { required: true}">#{i18n.getText('CDL028_3')}</div>
                     <!-- A2_2 -->
-                    <div id="A2_2" class="table-2" tabindex="1" data-bind="ntsDateRangePicker: { required: true, showNextPrevious: true, value: yearValue, type: 'year', jumpUnit: 'year', name:'#[CDL028_3]}"/>
+                    <div id="A2_2" class="table-2" tabindex="1" data-bind="ntsDateRangePicker: { required: true, showNextPrevious: true, value: yearValue, type: 'year', jumpUnit: 'year', name:'#[CDL028_3]'}"/>
 
                 </div>
 
