--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qsi/013/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qsi/013/a/index.xhtml
@@ -17,12 +17,13 @@
 		<com:scriptfile path="/view/kcp/share/tree.js" of="/nts.uk.com.web" />
 		<com:scriptfile path="/view/ccg/share/ccg.service.js" of="/nts.uk.com.web" />
 		<com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web" />
+        <com:scriptfile path="/view/kcp/share/list.js" of="/nts.uk.com.web"/>
 	</ui:define>
 
 	<ui:define name="content">
 		<div id="functions-area">
 			<button id="A1_1" tabindex="1" class="proceed" style="margin-left: 70px;"
-					data-bind="">#{i18n.getText('QSI013_4')}</button>
+					data-bind="click: exportExcel, enable: $root.errors.isEmpty">#{i18n.getText('QSI013_4')}</button>
 			<button id="A1_2" tabindex="2"
 					data-bind="">#{i18n.getText('QSI013_5')}</button>
 			<button id="A1_4" tabindex="3"
@@ -39,8 +40,8 @@
 			<div id="com-ccg001" ></div>
 
 			<div class="fixed-flex-layout-left" style="margin-left: 20px;margin-right: 10px;">
-				<div class="panel panel-frame" style="margin-left: 50px; width: 670px;">
-						<div class="valign-center control-group">
+				<div class="panel panel-frame" style="margin-left: 50px; width: 650px;">
+						<div class="valign-center control-group ">
 							<i id="img-calendar" class="image image-calendar"/>
 							<span>#{i18n.getText('QSI013_11')}</span>
 							<div id = "A2_4" data-bind="ntsDatePicker: {
@@ -63,25 +64,18 @@
 						</div>
 				</div>
 				<div class = "bottom" style="margin-top: 15px;margin-left: 50px;">
-						<table id="multi-list" data-bind="ntsGridList: {
-                    									height: 350,
-                    									options: items,
-														optionsValue: 'code',
-                    									columns: columns,
-                    									multiple: true,
-                    									value: currentCodeList
-                }"></table>
+                    <div id="component-items-list"></div>
 				</div>
 			</div>
 			<div class="fixed-flex-layout-right" data-bind="with: socInsurNotiCreSet">
-				<div class="panel panel-frame" style="width: 460px; height: 580px;">
+				<div class="panel panel-frame " style="width: 460px; height: 580px;">
 					<!--A222_12-->
 					<div class = "label"> #{i18n.getText('QSI013_15')}</div>
 					<!--A222_13-->
 					<div class = "valign-center control-group">
-						<div data-bind="ntsFormLabel: {  required: true }">#{i18n.getText('QSI013_16')}</div>
+						<div class="column-first" data-bind="ntsFormLabel: {  required: true }">#{i18n.getText('QSI013_16')}</div>
 						<!--A222_14-->
-						<div id = "A4_4" data-bind="ntsDatePicker: {
+						<div id = "A4_4"  data-bind="ntsDatePicker: {
 																name: '#{i18n.getText('QSI013_16')}',
 																value: $parent.filingDate,
 																dateFormat: 'YYYY/MM/DD',
@@ -94,11 +88,11 @@
 
 					<div class="valign-center control-group">
 						<!--A222_16-->
-						<div data-bind="ntsFormLabel: {  required: true }">#{i18n.getText('QSI013_17')}</div>
+						<div class="column-first" data-bind="ntsFormLabel: {  required: true }">#{i18n.getText('QSI013_17')}</div>
 						<!--A222_17-->
 							<div id="A3_19" tabindex="18" data-bind="ntsSwitchButton: {
                                 name: '#{i18n.getText('QSI013_17')}',
-                                options: $parent.rules,
+                                options: $parent.submittedNames,
                                 optionsValue: 'code',
                                 optionsText: 'name',
                                 value: submittedName,
@@ -109,16 +103,16 @@
 					<!-- A4-->
 					<div class="valign-center control-group ">
 						<!--A222_21-->
-						<div id="A4_11" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_17')}</div>
+						<div id="A4_11" class="column-first" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_17')}</div>
 						<!--A222_22-->
 						<div id="A4_12" data-bind="ntsComboBox: {
                         name: '#{i18n.getText('QSI013_17')}',
-                        options: $parent.rules,
+                        options: $parent.outputOrders,
                         optionsValue: 'code',
                         visibleItemsCount: 5,
                         value: outputOrder,
                         optionsText: 'name',
-                        editable: true,
+                        editable: false,
                         enable: true,
                         required: true,
                         selectFirstIfNull: true
@@ -127,16 +121,16 @@
 
 					<div class="valign-center control-group">
 						<!--A222_24-->
-						<div id="A4_14" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_20')}</div>
+						<div id="A4_14" class="column-first" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_20')}</div>
 						<!--A222_25-->
 						<div id="A4_16" data-bind="ntsComboBox: {
                         name: '#{i18n.getText('QSI013_20')}',
-                        options: $parent.rules,
+                        options: $parent.insuredNumbers,
                         optionsValue: 'code',
                         visibleItemsCount: 5,
                         value: insuredNumber,
                         optionsText: 'name',
-                        editable: true,
+                        editable: false,
                         enable: true,
                         required: true,
                         selectFirstIfNull: true
@@ -145,16 +139,16 @@
 
 					<div class="valign-center control-group">
 						<!--A222_27-->
-						<div id="A4_17" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_21')}</div>
+						<div id="A4_17" class="column-first" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_21')}</div>
 						<!--A222_28-->
 						<div id="A4_19" data-bind="ntsComboBox: {
                         name: '#{i18n.getText('QSI013_21')}',
-                        options: $parent.rules,
+                        options: $parent.businessArrSymbols,
                         optionsValue: 'code',
                         visibleItemsCount: 5,
                         value: businessArrSymbol,
                         optionsText: 'name',
-                        editable: true,
+                        editable: false,
                         enable: true,
                         required: true,
                         selectFirstIfNull: true,
@@ -162,16 +156,16 @@
 					</div>
 					<div class="valign-center control-group">
 						<!--A222_30-->
-						<div  data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_22')}</div>
+						<div class="column-first" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_22')}</div>
 						<!--A222_31-->
 						<div data-bind="ntsComboBox: {
                         name: '#{i18n.getText('QSI013_22')}',
-                        options: $parent.rules,
+                        options: $parent.officeInformations,
                         optionsValue: 'code',
                         visibleItemsCount: 5,
                         value: officeInformation,
                         optionsText: 'name',
-                        editable: true,
+                        editable: false,
                         enable: true,
                         required: true,
                         selectFirstIfNull: true,
@@ -181,15 +175,15 @@
 					<div style="border-bottom: 1px solid #bfb4b4;" class="control-group"><span class="label">#{i18n.getText('QSI013_26')}</span></div>
 					<div class="valign-center control-group ">
 						<!--A222_35-->
-						<div data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_23')}</div>
+						<div class="column-first" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_23')}</div>
 						<div id="A5_5" data-bind="ntsComboBox: {
                         name: '#{i18n.getText('QSI013_23')}',
-                        options: $parent.rules,
+                        options: $parent.printPersonNumbers,
                         optionsValue: 'code',
                         visibleItemsCount: 5,
                         value: printPersonNumber,
                         optionsText: 'name',
-                        editable: true,
+                        editable: false,
                         enable: true,
                         required: true,
                         selectFirstIfNull: true
@@ -198,15 +192,15 @@
 
 					<div style="border-bottom: 1px solid #bfb4b4;" class="control-group"><span class="label">#{i18n.getText('QSI013_24')}</span></div>
 					<div class="valign-center control-group">
-						<div data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_25')}</div>
+						<div class="column-first" data-bind="ntsFormLabel: {constrant: '', required:true}">#{i18n.getText('QSI013_25')}</div>
 						<div id="A6_5" data-bind="ntsComboBox: {
                         name: '#{i18n.getText('QSI013_25')}',
-                        options: $parent.rules,
+                        options: $parent.outputFormats,
                         optionsValue: 'code',
                         visibleItemsCount: 5,
                         value: outputFormat,
                         optionsText: 'name',
-                        editable: true,
+                        editable: false,
                         enable: true,
                         required: true,
                         selectFirstIfNull: true
@@ -215,15 +209,15 @@
 					</div>
 
 					<div class="valign-center control-group ">
-						<div data-bind="ntsFormLabel: {required:true}">#{i18n.getText('QSI013_27')}</div>
+						<div class="column-first" data-bind="ntsFormLabel: {required:true}">#{i18n.getText('QSI013_27')}</div>
 						<div id="A6_9" data-bind="ntsComboBox: {
                         name: '#{i18n.getText('QSI013_27')}',
-                        options: $parent.rules,
+                        options: $parent.textPersonNumbers,
                         optionsValue: 'code',
                         visibleItemsCount: 5,
                         value: textPersonNumber,
                         optionsText: 'name',
-                        editable: true,
+                        editable: false,
                         enable: true,
                         required: true,
                         selectFirstIfNull: true,
@@ -232,10 +226,10 @@
 					</div>
 
 					<div class="valign-center control-group">
-						<div data-bind="ntsFormLabel: {required:true}">#{i18n.getText('QSI013_28')}</div>
+						<div class="column-first" data-bind="ntsFormLabel: {required:true}">#{i18n.getText('QSI013_28')}</div>
 						<div class="cf" data-bind="ntsSwitchButton: {
                         name: '#{i18n.getText('QSI013_28')}',
-                        options: $parent.rules,
+                        options: $parent.lineFeedCodes,
                         optionsValue: 'code',
                         optionsText: 'name',
                         value: lineFeedCode,
@@ -245,7 +239,7 @@
 					</div>
 
 					<div class="valign-center control-group">
-						<div data-bind="ntsFormLabel: {required:false}">#{i18n.getText('QSI013_32')}</div>
+						<div class="column-first" data-bind="ntsFormLabel: {required:false}">#{i18n.getText('QSI013_32')}</div>
 						<input data-bind="ntsTextEditor: {value: fdNumber, name: '#{i18n.getText('QSI013_32')}'}" />
 					</div>
 				</div>
